@@ -1,3 +1,8 @@
+Thu Aug  8 13:27:18 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/DynamicAny/DynValueCommon_i.cpp:
+          Removed several commented out includes
+
 Wed Aug  7 09:43:50 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/tests/unit/Notify/MC/MonitorManager/MonitorClient.cpp:
